webapp-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp2
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/component: frontend
spec:
  selector:
    matchLabels:
      app: employees
      version: v2
  replicas: 3
  template:
    metadata:
      labels:
        app: employees
        version: v2
    spec:
      containers:
      - name: web-app2-pod
        image: 690612321301.dkr.ecr.us-east-1.amazonaws.com/web-application-image-repo:v2.0
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 8080
