webapp-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web-app-pod
  labels:
    app.kubernetes.io/name: webapp-pod
spec:
  containers:
    - name: my-web-app
      image: 690612321301.dkr.ecr.us-east-1.amazonaws.com/web-application-image-repo:v1.0
      ports:
        - containerPort: 8080
