mysqldb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-db-service
  labels:
    app.kubernetes.io/name: mysqldb-service
    app.kubernetes.io/component: backend
spec:
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  selector:
    app.kubernetes.io/name: mysqldb-pod
