webapp-service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app.kubernetes.io/name: webapp
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30000
  selector:
    app: employees
    version: v2
