webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  labels:
    app.kubernetes.io/name: webapp-service
    app.kubernetes.io/component: frontend
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30001
  selector:
    app.kubernetes.io/name: webapp-pod
