ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  rules:
    - host: http://assignment2.com  
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: webapp-service
                port:
                  number: 80
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: webapp2-service
                port:
                  number: 80
